multiprocess+readme.md

--- a/config.toml
+++ b/config.toml
@@ -1,2 +1,8 @@
+[serviceweaver]
+binary = "./serviceweaver"
+
 [single]
+listeners.emoji = {address = "localhost:9000"}
+
+[multi]
 listeners.emoji = {address = "localhost:9000"}
